# github-actions-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-03-18-github-actions-mcp.md
src/github_actions_mcp/: client.py  server.py  utils.py
src/github_actions_mcp/tools/: artifacts.py  jobs.py  runs.py  secrets.py  workflows.py
tests/: test_artifacts.py  test_client.py  test_integration.py  test_jobs.py  test_runs.py  test_secrets.py  test_utils.py  test_workflows.py
